# arrowbase

./: CMakeLists.txt
efficiency/: PseudoParquetWriterTest.cpp
unit/: ArrowDummy.cpp
